# leakharvester

./: .gitignore  README.md  TODO.md  docker-compose.yml  pyproject.toml  test1.txt
docs/: environment_config.md  leakharvester.md
src/leakharvester/: config.py  main.py
src/leakharvester/adapters/: clickhouse.py  console.py  local_fs.py
src/leakharvester/domain/: exceptions.py  rules.py  schemas.py
src/leakharvester/ports/: file_storage.py  repository.py
src/leakharvester/services/: index_optimizer.py  ingestor.py  secure_io.py
tests/: bench_all.py  bench_step.py  benchmark_buffer.py  conftest.py  debug_split.py  search_results.json  test_indexing.py  test_indexing_inverted.py  test_ingestor.py  test_ingestor_fixes.py  validate_search.py
